<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:minHeight="90dp"
    android:background="@drawable/bg_header"
    android:padding="50dp"
    android:paddingTop="30dp"
    android:paddingBottom="30dp"
    android:fitsSystemWindows="true">

    <!-- Ícone logo-->
    <ImageView
        android:id="@+id/logoIcon"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:src="@drawable/ic_logo_header"
        android:contentDescription="@string/logo_icon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

    <!-- Título e Subtítulo -->
    <LinearLayout
        android:id="@+id/textContainer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="8dp"
        android:orientation="vertical"
        app:layout_constraintStart_toEndOf="@id/logoIcon"
        app:layout_constraintTop_toTopOf="@id/logoIcon"
        app:layout_constraintBottom_toBottomOf="@id/logoIcon"
        app:layout_constraintEnd_toStartOf="@id/ic_hamburguer_menu">

        <TextView
            android:id="@+id/titleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/subtitleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nav_header_subtitle_app"
            android:textSize="13sp"
            android:textColor="@android:color/white" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>