<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:gravity="center_horizontal">

    <!-- CARD 1 - Tomado -->
    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="6dp"
        android:layout_marginHorizontal="8dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="3dp"
        android:backgroundTint="@android:color/white">

        <!-- Borda lateral azul -->
        <include layout="@layout/view_borda_lateral_azul"/>

        <!-- Conteúdo do card -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="12dp">

            <!-- Nome e dosagem da medicação-->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Losartana 50mg"
                android:textStyle="bold"
                android:textColor="@color/gray_500" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="1 comprimido"
                android:textColor="@android:color/darker_gray" />

            <!-- Linha com horários + status -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="4dp"
                android:gravity="center_vertical">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_weight="1"
                    android:gravity="center_vertical">

                    <!-- Previsto -->
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:gravity="center_vertical"
                        android:layout_marginEnd="12dp">

                        <ImageView
                            android:layout_width="14dp"
                            android:layout_height="14dp"
                            android:layout_marginEnd="4dp"
                            android:src="@drawable/ic_relogio"
                            app:tint="@color/gray_500" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/scheduled_time"
                            android:textSize="13sp"
                            android:textColor="@android:color/darker_gray" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="4dp"
                            android:text="08:00"
                            android:textSize="13sp"
                            android:textColor="@color/black" />
                    </LinearLayout>

                    <!-- Tomado -->
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:gravity="center_vertical">

                        <ImageView
                            android:layout_width="14dp"
                            android:layout_height="14dp"
                            android:layout_marginEnd="4dp"
                            android:src="@drawable/ic_check"
                            app:tint="@color/green_200" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/schedule_taken"
                            android:textSize="13sp"
                            android:textColor="@android:color/darker_gray" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="4dp"
                            android:text="08:05"
                            android:textSize="13sp"
                            android:textColor="@color/black" />
                    </LinearLayout>
                </LinearLayout>

                <!-- Status verd "Tomado" alinhado à direita -->
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center_vertical">

                    <ImageView
                        android:layout_width="14dp"
                        android:layout_height="14dp"
                        android:src="@drawable/ic_check"
                        app:tint="@color/green_200" />

                    <TextView
                        android:id="@+id/textViewStatus"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="6dp"
                        android:text="@string/status_taken"
                        android:textSize="12sp"
                        android:textColor="@color/green_200"
                        android:gravity="center"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

    <!-- CARD 2 - Atrasado -->
    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="6dp"
        android:layout_marginHorizontal="8dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="3dp"
        android:backgroundTint="@android:color/white">

        <include layout="@layout/view_borda_lateral_azul"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="12dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Metformina 850mg"
                android:textStyle="bold"
                android:textColor="@color/gray_500" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="1 comprimido"
                android:textColor="@android:color/darker_gray" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="4dp"
                android:gravity="center_vertical">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="14dp"
                        android:layout_height="14dp"
                        android:layout_marginEnd="4dp"
                        android:src="@drawable/ic_relogio"
                        app:tint="@color/gray_500" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/scheduled_time"
                        android:textSize="13sp"
                        android:textColor="@android:color/darker_gray" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="4dp"
                        android:text="12:00"
                        android:textSize="13sp"
                        android:textColor="@color/black" />

                    <ImageView
                        android:layout_width="14dp"
                        android:layout_height="14dp"
                        android:layout_marginStart="12dp"
                        android:layout_marginEnd="4dp"
                        android:src="@drawable/ic_check"
                        app:tint="@color/orange" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/schedule_taken"
                        android:textSize="13sp"
                        android:textColor="@android:color/darker_gray" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="4dp"
                        android:text="12:30"
                        android:textSize="13sp"
                        android:textColor="@color/black" />
                </LinearLayout>

                <ImageView
                    android:layout_width="14dp"
                    android:layout_height="14dp"
                    android:src="@drawable/ic_relogio"
                    app:tint="@color/orange" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="6dp"
                    android:text="@string/late_status"
                    android:textSize="12sp"
                    android:textColor="@color/orange" />
            </LinearLayout>
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

    <!-- CARD 3 - Perdido -->
    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="6dp"
        android:layout_marginHorizontal="8dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="3dp"
        android:backgroundTint="@android:color/white">

        <include layout="@layout/view_borda_lateral_azul"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="12dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Omeprazol 20mg"
                android:textStyle="bold"
                android:textColor="@color/gray_500" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="1 cápsula"
                android:textColor="@android:color/darker_gray" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="4dp"
                android:gravity="center_vertical">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="14dp"
                        android:layout_height="14dp"
                        android:layout_marginEnd="4dp"
                        android:src="@drawable/ic_relogio"
                        app:tint="@color/gray_500" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/scheduled_time"
                        android:textSize="13sp"
                        android:textColor="@android:color/darker_gray" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="4dp"
                        android:text="20:00"
                        android:textSize="13sp"
                        android:textColor="@color/black" />
                </LinearLayout>

                <ImageView
                    android:layout_width="14dp"
                    android:layout_height="14dp"
                    android:src="@drawable/ic_relogio"
                    app:tint="@color/red" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="6dp"
                    android:text="@string/lost_status"
                    android:textSize="12sp"
                    android:textColor="@color/red" />
            </LinearLayout>
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

</LinearLayout>
